--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "async": "2.1.4",
     "blipp": "2.3.0",
     "good": "7.1.0",
+    "handlebars": "^4.0.6",
     "hapi": "16.0.1",
     "hapi-boom-decorators": "2.2.2",
-    "lodash": "4.17.2"
+    "lodash": "4.17.2",
+    "mongojs": "^2.4.0",
+    "vision": "^4.1.1"
   }
 }
